--- a/html/miner.html
+++ b/html/miner.html
@@ -210,7 +210,7 @@
 	<table id="miner-table" style="height: 15%">
 		<tbody>
 			<tr>
-				<th align="left">Id</th>
+				<th align="left">ID</th>
 			</tr>
 			<tr>
 				<th align="left">Host</th>
